--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
-# Compiled class file
-*.class
+.DS_Store
 
-# Log file
-*.log
 
-# BlueJ files
-*.ctxt
+# local env files
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/**/*.log
+/**/node_modules
+/**/dist
+target
+package-lock.json
+
+
+/**/*.iml
